micro_ecomm/infra/k8s/microservices/shipping-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
      - name: shipping-service
        image: your-dockerhub-username/shipping-service:latest
        ports:
        - containerPort: 5005
