micro_ecomm/infra/k8s/microservices/shipping-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  type: ClusterIP
  ports:
    - port: 5005
      targetPort: 5005
  selector:
    app: shipping-service
